// ============================================================
//  AniBase — Entity Relationship Model
//  Pegar en: https://dbdiagram.io  o extensión DB Diagram VSC
// ============================================================

Project AniBase {
  database_type: 'PostgreSQL'
  Note: 'Biblioteca personal de anime con usuarios y listas'
}

// ────────────────────────────────────────────────────────────
//  ENUMS
// ────────────────────────────────────────────────────────────

Enum watch_status {
  watching
  completed
  plan_to_watch
  dropped
  paused
}

Enum content_type {
  series
  movie
  ova
  ona
  special
}

// ────────────────────────────────────────────────────────────
//  CATÁLOGOS
// ────────────────────────────────────────────────────────────

Table genre {
  id   serial      [pk, increment]
  name varchar(50) [not null, unique, note: 'Acción, Romance, Sci-Fi...']
}

Table studio {
  id      serial       [pk, increment]
  name    varchar(100) [not null, unique]
  country varchar(50)  [default: 'Japan']
  website text         [null]
}

// ────────────────────────────────────────────────────────────
//  ANIME
// ────────────────────────────────────────────────────────────

Table anime {
  id          serial        [pk, increment]
  title       varchar(255)  [not null]
  alt_title   varchar(255)  [null, note: 'Título japonés / alternativo']
  type        content_type  [not null, default: 'series']
  studio_id   int           [null, ref: > studio.id]
  episodes    int           [not null, default: 0]
  duration    int           [null, note: 'Minutos por episodio']
  year        smallint      [not null]
  season      varchar(20)   [null, note: 'Spring / Summer / Fall / Winter']
  synopsis    text          [null]
  img         text          [null, note: 'URL portada']
  mal_id      int           [null, unique, note: 'MyAnimeList ID']
  created_at  timestamp     [not null, default: `now()`]
  updated_at  timestamp     [not null, default: `now()`]
}

// Géneros N:M
Table anime_genre {
  anime_id int [not null, ref: > anime.id]
  genre_id int [not null, ref: > genre.id]

  indexes {
    (anime_id, genre_id) [pk]
  }
}

// ────────────────────────────────────────────────────────────
//  USUARIOS
// ────────────────────────────────────────────────────────────

Table user {
  id         serial       [pk, increment]
  username   varchar(50)  [not null, unique]
  email      varchar(150) [not null, unique]
  password   varchar(255) [not null, note: 'Hash bcrypt']
  avatar     text         [null]
  created_at timestamp    [not null, default: `now()`]
}

// Lista personal por usuario
Table user_anime {
  user_id    int          [not null, ref: > user.id]
  anime_id   int          [not null, ref: > anime.id]
  status     watch_status [not null, default: 'plan_to_watch']
  rating     smallint     [null, note: '1 a 5']
  progress   int          [not null, default: 0, note: 'Episodios vistos']
  notes      text         [null]
  added_at   timestamp    [not null, default: `now()`]
  updated_at timestamp    [not null, default: `now()`]

  indexes {
    (user_id, anime_id) [pk]
  }
}

// Reseñas públicas
Table review {
  id         serial    [pk, increment]
  user_id    int       [not null, ref: > user.id]
  anime_id   int       [not null, ref: > anime.id]
  rating     smallint  [not null, note: '1 a 5']
  body       text      [null]
  spoiler    boolean   [not null, default: false]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, anime_id) [unique, note: 'Un usuario, una reseña por anime']
  }
}
